url-redirect-and-rewrite/destinationrule-demoapp.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: webdemo
spec:
  host: webdemo
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
