url-redirect-and-rewrite/virutalservice-demoapp.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: proxy
spec:
  hosts:
  - "web.candy.com"                     # 对应于gateways/proxy-gateway
  gateways:
  - istio-system/proxy-gateway # 相关定义仅应用于Ingress Gateway上, NAMESPACE/GATEWANAME
  #- mesh
  http:
  - name: default
    route:
    - destination:
        host: proxy # service 名称
