url-redirect-and-rewrite/virutalservice-subset-demoapp.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: webdemo
spec:
  hosts:
  - webdemo
    #  - backend
  http:
  - name: canary
    match:
    - uri:
        prefix: /canary
    rewrite:
      uri: /
    route:
    - destination:
        host: webdemo
        subset: v2
  
  - name: redirect
    match:
    - uri:
        prefix: /backend
    redirect:
      uri: /
      authority: backend
      port: 8082
      
  - name: default
    route:
    - destination:
        host: webdemo
        subset: v1
